--- a/compose.yaml
+++ b/compose.yaml
@@ -15,9 +15,6 @@ services:
       - POSTGRES_SSLMODE=${POSTGRES_SSLMODE}
     volumes:
       - .:/app
-    depends_on:
-      postgres:
-        condition: service_healthy
   postgres:
     image: postgres
     restart: always
@@ -30,7 +27,7 @@ services:
     ports:
       - "${POSTGRES_LOCAL_PORT}:${POSTGRES_PORT}"
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", $POSTGRES_USER]
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
       interval: 10s
       timeout: 5s
       retries: 5
